use real em dashes

--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@ preload: hero.svg
         <div class="landing-info-text">
           <h3>Solving important problems</h3>
           <p>
-            Every day millions of people &mdash; from veterans to immigrants
-            &mdash; depend on government services to fulfill their needs. But
+            Every day millions of people — from veterans to immigrants
+            — depend on government services to fulfill their needs. But
             too often these services are delivered using outmoded policies,
             practices, and technologies. We’re public servants at heart who are
             driven to make these services work better in the internet era.
