--- a/pages/about.html
+++ b/pages/about.html
@@ -109,7 +109,7 @@ preload: hero-about-us.svg
       </p>
 
       <p>
-        Feel free to reach out directly to one of our leaders &mdash;
+        Feel free to reach out directly to one of our leaders —
         <a href="mailto:chris@skylight.digital">Chris Cairns</a>,
         <a href="mailto:shashank@skylight.digital">Shashank Khandelwal</a>,
         or <a href="mailto:nicole@skylight.digital">Nicole Campbell</a>.
