--- a/pages/join.html
+++ b/pages/join.html
@@ -37,15 +37,15 @@ preload: hero-join-us.svg
         <p>
           We’re more than a company. We represent a movement to reinvent how the
           government serves families, patients, veterans, immigrants, and many others
-          in today’s digital world. Everything about us &mdash; our structure,
+          in today’s digital world. Everything about us — our structure,
           <a href="/company/values/">values</a>, <a href="/work/services/">services</a>,
           <a href="/work/experience/">work</a>, <a href="/thoughts/blog/">thoughts</a>,
-          and <a href="/company/about/">team</a> &mdash; is designed with that purpose in mind.
+          and <a href="/company/about/">team</a> — is designed with that purpose in mind.
         </p>
 
         <h3>You matter</h3>
         <p>
-          It’s people like you &mdash; with talents in research, design, product, engineering, data, and more &mdash;
+          It’s people like you — with talents in research, design, product, engineering, data, and more —
           who can make a difference. We’ve created an environment that empowers you to unleash your skills
           for public good, whether that’s improving
           <a href="/work/experience/ct-ece-reporter/">early childhood outcomes</a>
