--- a/pages/training.html
+++ b/pages/training.html
@@ -47,7 +47,7 @@ image_description: Skylight training banner showing various educational-related 
         >
           <div class="blog-post-block">
             <h2 class="blog-post-title">
-              Digital IT Acquisition Professional (DITAP) Training &mdash;
+              Digital IT Acquisition Professional (DITAP) Training —
               Executive Edition
             </h2>
             <p class="card-text blog-post-text">
