--- a/pages/trainings/ditap.html
+++ b/pages/trainings/ditap.html
@@ -166,7 +166,7 @@ class_2_spots:
             <h3>Dynamic learning opportunities</h3>
             <p>
               Our balanced, holistic approach to teaching will give you the
-              tools you need to master the course material &mdash; whatever your
+              tools you need to master the course material — whatever your
               learning style. We blend traditional in-person classroom learning
               (such as seminars, panels, and guest speakers) with flexible,
               asynchronous online learning content (such as readings, team
