--- a/pages/trainings/ditap_executive.html
+++ b/pages/trainings/ditap_executive.html
@@ -347,7 +347,7 @@ class_2_spots:
             important role in making this transition happen, but need to manage
             their time carefully. We’ve taken the core elements from our longer,
             6-month DITAP course and distilled it into an executive-level,
-            crash-course summary &mdash; perfect for those who need a learning
+            crash-course summary — perfect for those who need a learning
             experience that gets right to the point.
           </p>
           {% endcapture %} {% include accordion.html accordion_header = 'Why make
