--- a/pages/contracting.html
+++ b/pages/contracting.html
@@ -61,8 +61,8 @@ preload: hero-contracting.svg
 
     <h2>Contracting pathways and vehicles</h2>
     <ul>
-      <li>GSA Multiple Award Schedule (contract #: 47QTCA18D00D0, SIN #: 54151S) &mdash; accessible to all federal, state, and local governments</li>
-      <li>Multiple SBIR/STTR contract vehicles eligible for sole-source awards and accessible to any federal agency &mdash; <a href="/assets/Skylight-SBIR-STTR-Procurement-Guide.pdf">check out our brief guide</a> on how to leverage these amazing vehicles to engage with us quickly and easily</li>
+      <li>GSA Multiple Award Schedule (contract #: 47QTCA18D00D0, SIN #: 54151S) — accessible to all federal, state, and local governments</li>
+      <li>Multiple SBIR/STTR contract vehicles eligible for sole-source awards and accessible to any federal agency — <a href="/assets/Skylight-SBIR-STTR-Procurement-Guide.pdf">check out our brief guide</a> on how to leverage these amazing vehicles to engage with us quickly and easily</li>
       <li>California Agile Vendor Pool<div class="badge-sub--container"><span class="badge badge-sub">sub</span></div></li>
       <li>DHS Services for Enabling Agile Delivery (SEAD)<div class="badge-sub--container"><span class="badge badge-sub">sub</span></div></li>
       <li>CMS Enterprise Agile Transformation Services (EATS)<div class="badge-sub--container"><span class="badge badge-sub">sub</span></div></li>
