use real en dashes

--- a/pages/trainings/ditap.html
+++ b/pages/trainings/ditap.html
@@ -289,8 +289,8 @@ class_2_spots:
               {% endif %}
             </div>
             <p class="tuition-card-note">
-              In-person classroom sessions will be held on Nov 8&ndash;10, Jan
-              18&ndash;20, Mar 7&ndash;9, and Apr 25&ndash;27. If COVID-19
+              In-person classroom sessions will be held on Nov 8–10, Jan
+              18–20, Mar 7–9, and Apr 25–27. If COVID-19
               continues to present public-health risks, however, these sessions
               will be conducted virtually.
             </p>
