--- a/pages/trainings/ditap_executive.html
+++ b/pages/trainings/ditap_executive.html
@@ -256,7 +256,7 @@ class_2_spots:
           <div class="col-12">
             <div class="class-header">
               <h3 class="class-heading">
-                Thu, Oct 21, 9:00 am &ndash; 5:00 pm ET
+                Thu, Oct 21, 9:00 am – 5:00 pm ET
               </h3>
               {% if page.class_1_spots %}
               <div class="class-spots">
@@ -289,7 +289,7 @@ class_2_spots:
           <div class="col-12">
             <div class="class-header">
               <h3 class="class-heading">
-                Thu, Apr 21, 9:00 am &ndash; 5:00 pm ET
+                Thu, Apr 21, 9:00 am – 5:00 pm ET
               </h3>
               {% if page.class_2_spots %}
               <div class="class-spots">
