--- a/pages/about.html
+++ b/pages/about.html
@@ -7,10 +7,10 @@ preload: hero-about-us.svg
 ---
 
 {% include hero_banner.html
-  hero_title = 'We’re Skylight!'
-  hero_content = 'Our mission is to make government work <br class="linebreak">in a digital world.'
-  color = 'info'
-  image = 'hero-about-us.svg'
+  hero_title = "We’re Skylight!"
+  hero_content = "Our mission is to make government work <br class="linebreak">in a digital world."
+  color = "info"
+  image = "hero-about-us.svg"
 %}
 
 <div class="about-us">
