--- a/pages/blog_posts/index.html
+++ b/pages/blog_posts/index.html
@@ -7,8 +7,8 @@ redirect_from:
 pagination:
   enabled: true
   collection: blog_posts
-  sort_field: 'date'
+  sort_field: "date"
   sort_reverse: true
 ---
-  
+
   {% include paginated_pages.html %}
