--- a/pages/contact.html
+++ b/pages/contact.html
@@ -13,7 +13,7 @@ preload: hero-contact-us.svg
   image = ""
   color = "yellow"
   text = "dark"
-  image = 'hero-contact-us.svg'
+  image = "hero-contact-us.svg"
 %}
 
 <div class="contact-us grid-container maxw-prose text">
