--- a/pages/policies.html
+++ b/pages/policies.html
@@ -5,7 +5,7 @@ permalink: /company/policies/
 ---
 
 {% include page_header.html
-  header_class = 'page-header-2'
+  header_class = "page-header-2"
 %}
 
 <div class="our-policies grid-container maxw-prose">
