--- a/pages/press/index.html
+++ b/pages/press/index.html
@@ -5,7 +5,7 @@ permalink: /company/press/
 pagination:
   enabled: true
   collection: press
-  sort_field: 'date'
+  sort_field: "date"
   sort_reverse: true
   per_page: 5
 preload: hero-press.svg
