--- a/pages/services.html
+++ b/pages/services.html
@@ -12,8 +12,11 @@ cta: /connect/contact/
 preload: hero-services.svg
 ---
 
-{% include hero_banner.html hero_content = 'A lot goes into making you <br class="linebreak">a
-digital-first agency.' color = 'blue' image = 'hero-services.svg' %}
+{% include hero_banner.html
+  hero_content = 'A lot goes into making you <br class="linebreak">a digital-first agency.'
+  color = 'blue'
+  image = 'hero-services.svg'
+%}
 
 <div class="services-content left-justified-list">
   <div class="">
