--- a/pages/talks/index.html
+++ b/pages/talks/index.html
@@ -6,7 +6,7 @@ preload: hero-talks.svg
 pagination:
   enabled: true
   collection: talks
-  sort_field: 'date'
+  sort_field: "date"
   sort_reverse: true
   per_page: 9
 ---
