--- a/pages/toolkits.html
+++ b/pages/toolkits.html
@@ -9,9 +9,9 @@ image_description: Skylight toolkits banner showing a collection of different to
 ---
 
 {% include hero_banner.html
-  hero_content = 'Good work requires good tools.'
-  color = 'blue'
-  image = 'hero-toolkits.svg'
+  hero_content = "Good work requires good tools."
+  color = "blue"
+  image = "hero-toolkits.svg"
 %}
 
 <section class="maxw-md grid-container text prose">
