--- a/pages/trainings/ditap.html
+++ b/pages/trainings/ditap.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: "Digital IT Acquisition Professional (DITAP) Training"
+title: Digital IT Acquisition Professional (DITAP) Training
 permalink: /work/services/training/ditap/
 redirect_from:
   - /services/ditap/
