--- a/404.html
+++ b/404.html
@@ -7,14 +7,14 @@ skip_index: true
 
 <div class="text">
   {% capture header_content %}
-    We couldn't find the page that you were looking for. Try to <a href="/">start over at the homepage</a>
+    We couldn’t find the page that you were looking for. Try to <a href="/">start over at the homepage</a>
     or <a href="{{site.github_issues_url}}">file an issue on our GitHub repository</a> if you think this
     is a mistake.
   {% endcapture %}
 
   {% include page_header.html
-    header_title = 'Oh snap!'
-    header_content_class = 'page-header-content-1'
+    header_title = "Oh snap!"
+    header_content_class = "page-header-content-1"
     header_content = header_content
   %}
 </div>
