--- a/pages/contracting.html
+++ b/pages/contracting.html
@@ -6,10 +6,10 @@ preload: hero-contracting.svg
 ---
 
 {% include hero_banner.html
-  hero_content = "Learn more about why and how <br class="linebreak">to contract with us."
-  color = "yellow"
-  text = "dark"
-  image = "hero-contracting.svg"
+  hero_content = 'Learn more about why and how <br class="linebreak">to contract with us.'
+  color = 'yellow'
+  text = 'dark'
+  image = 'hero-contracting.svg'
 %}
 
 <section class="grid-container maxw-prose">
@@ -34,29 +34,29 @@ preload: hero-contracting.svg
     <h2>Key capabilities</h2>
     <ul>
       <li>Creative</li>
-      <li>Service Design</li>
-      <li>User Research</li>
-      <li>User Experience Design</li>
-      <li>Content Strategy & Design</li>
+      <li>Service design</li>
+      <li>User research</li>
+      <li>User experience design</li>
+      <li>Content strategy & design</li>
       <li>Accessibility</li>
-      <li>Agile Methods</li>
-      <li>Software Development</li>
-      <li>Legacy Modernization</li>
-      <li>Microservices & Evolutionary Architecture</li>
+      <li>Agile methods</li>
+      <li>Software development</li>
+      <li>Legacy modernization</li>
+      <li>Microservices & evolutionary architecture</li>
       <li>DevOps</li>
-      <li>Cloud & Platform Engineering</li>
+      <li>Cloud & platform engineering</li>
       <li>APIs</li>
-      <li>Data & Analytics</li>
-      <li>Artificial Intelligence & Machine Learning</li>
-      <li>Open Government</li>
-      <li>Security & Privacy</li>
+      <li>Data & analytics</li>
+      <li>Artificial intelligence & machine learning</li>
+      <li>Open government</li>
+      <li>Security & privacy</li>
       <li>Internet of Things</li>
-      <li>Product Management</li>
-      <li>Delivery Management</li>
-      <li>Digital Procurement</li>
-      <li>Digital Transformation</li>
-      <li>Digital Talent Management</li>
-      <li>Coaching & Training</li>
+      <li>Product management</li>
+      <li>Delivery management</li>
+      <li>Digital procurement</li>
+      <li>Digital transformation</li>
+      <li>Digital talent management</li>
+      <li>Coaching & training</li>
     </ul>
 
     <h2>Contracting pathways and vehicles</h2>
@@ -78,4 +78,5 @@ preload: hero-contracting.svg
     </ul>
   </div>
 </section>
+
 {% include hire_us_cta.html %}
