--- a/thankyou.html
+++ b/thankyou.html
@@ -14,8 +14,8 @@ skip_index: true
   {% endcapture %}
 
   {% include page_header.html
-    header_title = 'Thank you!'
-    header_content_class = 'page-header-content-1'
+    header_title = "Thank you!"
+    header_content_class = "page-header-content-1"
     header_content = header_content
   %}
 </div>
