--- a/pages/join.html
+++ b/pages/join.html
@@ -178,12 +178,12 @@ preload: hero-join-us.svg
           </div>
 
           <div class="col-12 col-lg-4">
-            {% include icons/join/tools.svg %}
-            <h3>Tools</h3>
+            {% include icons/join/shopping-cart.svg %}
+            <h3>Stuff</h3>
             <p>
               We provide an annual tech budget of up to $750 for anything, such as a new computer,
               that you think will help to do your job better. Most software that you need will be
-              provided by us.
+              provided by us. We also provide an annual <a href="https://skylight-swag.myshopify.com/">Skylight swag</a> budget of $50.
             </p>
           </div>
 
