Adjust SD hero spacing and Exp spacing

--- a/pages/services/service_design.html
+++ b/pages/services/service_design.html
@@ -16,7 +16,7 @@ preload: hero-service-design.svg
           <h1 class="text-white">
             Service design: <br class="linebreak">Transforming user experiences
           </h1>
-          <p class="text-white font-lg mt-2 mb-0">
+          <p class="hero-text text-white font-lg">
             Learn what service design can do for you and how Skylight <br class="linebreak">can help
             you use it to deliver greater public value.
           </p>
