--- a/pages/join.html
+++ b/pages/join.html
@@ -192,7 +192,7 @@ preload: hero-join-us.svg
             <h3>Code of conduct</h3>
             <p>
               Everyone deserves a safe, inclusive environment. We live by our
-              <a href="/company/policies/code-of-conduct/">code of conduct</a>, and actively look
+              <a href="/company/policies/code-of-conduct/">Code of Conduct</a>, and actively look
               for ways to make it even stronger, as well as reinforce expected behaviors.
             </p>
           </div>
