--- a/pages/policies.html
+++ b/pages/policies.html
@@ -23,12 +23,12 @@ permalink: /company/policies/
   <div class="policies-row">
     <div class="policy-list-col">
       <ul>
-        <li><a href="/company/policies/privacy/">Privacy policy</a></li>
-        <li><a href="/company/policies/intellectual-property/">Intellectual property policy</a></li>
-        <li><a href="/company/policies/linking/">Linking policy</a></li>
-        <li><a href="/company/policies/open-source/">Open source policy</a></li>
-        <li><a href="/company/policies/vulnerability-disclosure/">Vulnerability disclosure policy</a></li>
-        <li><a href="/company/policies/code-of-conduct/">Code of conduct policy</a></li>
+        <li><a href="/company/policies/privacy/">Privacy Policy</a></li>
+        <li><a href="/company/policies/intellectual-property/">Intellectual Property Policy</a></li>
+        <li><a href="/company/policies/linking/">Linking Policy</a></li>
+        <li><a href="/company/policies/open-source/">Open Source Policy</a></li>
+        <li><a href="/company/policies/vulnerability-disclosure/">Vulnerability Disclosure Policy</a></li>
+        <li><a href="/company/policies/code-of-conduct/">Code of Conduct Policy</a></li>
       </ul>
     </div>
   </div>
