--- a/pages/services/service_design.html
+++ b/pages/services/service_design.html
@@ -212,9 +212,8 @@ preload: hero-service-design.svg
                   Building service design capacity
                 </h3>
                 <p class="blog-post-text">
-                  Jumpstarting the U.S. Weather Systems Program Office’s journey
-                  toward mastering service design while improving their
-                  customers’ cloud migration experience.
+                  Embedding service design ways of thinking and working throughout the U.S. Air Force, 
+                  starting with BESPIN and the U.S. Weather Systems Program Office. 
                 </p>
                 <div class="card-footer blog-post-footer">
                   <a href="/work/experience/usaf-gearfit/" tabindex="0">
