--- a/pages/services/service_design.html
+++ b/pages/services/service_design.html
@@ -14,11 +14,13 @@ preload: hero-service-design.svg
       <div class="">
         <div class="text-center my-5">
           <h1 class="text-white">
-            Service design: <br class="linebreak">Transforming user experiences
+            Service design: <br class="linebreak" />Transforming user
+            experiences
           </h1>
           <p class="hero-text text-white font-lg">
-            Learn what service design can do for you and how Skylight <br class="linebreak">can help
-            you use it to deliver greater public value.
+            Learn what service design can do for you and how Skylight
+            <br class="linebreak" />can help you use it to deliver greater
+            public value.
           </p>
           <a
             class="text-white d-inline-block"
@@ -45,9 +47,13 @@ preload: hero-service-design.svg
               >
             </li>
             <li>
-              <a class="nav-link" href="#how-we-work">How we work</a>
+              <a class="nav-link" href="#what-we-deliver">What we deliver</a>
             </li>
-            <li><a class="nav-link" href="#case-studies">Case studies</a></li>
+            <li>
+              <a class="nav-link" href="#client-spotlights"
+                >Client spotlights</a
+              >
+            </li>
             <li>
               <a class="nav-link" href="#how-to-engage-with-us"
                 >How to engage with us</a
@@ -60,9 +66,7 @@ preload: hero-service-design.svg
 
     <div class="col-12 col-md-9 text">
       <div class="mt-5">
-        <h2 class="sd__heading" id="why-service-design">
-          Why service design?
-        </h2>
+        <h2 class="sd__heading" id="why-service-design">Why service design?</h2>
         <p>
           Government services involve a complex mix of components, such as
           policies, operations, people, and technology. For people accessing
@@ -95,22 +99,26 @@ preload: hero-service-design.svg
           industries, including government, are increasingly investing in
           service design.
         </p>
-        {% include callout.html
-          type = "pullquote"
-          content = "Always design a thing by considering it in its larger context — a
-                    chair in a room, a room in a house, a house in an environment, an
-                    environment in a city plan."
-          cite_name = "Eero Saarinen"
-          cite_title = "Architect"
-          class= "pullquote--alt"
-        %}
-        <h2 class="sd__heading" id="how-we-work">How we work</h2>
+        {% include callout.html type = "pullquote" content = "Always design a
+        thing by considering it in its larger context — a chair in a room, a
+        room in a house, a house in an environment, an environment in a city
+        plan." cite_name = "Eero Saarinen" cite_title = "Architect" class=
+        "pullquote--alt" %}
+        <h2 class="sd__heading" id="what-we-deliver">What we deliver</h2>
         <p>
           Our goal is to help you embed service design ways of thinking and
           working throughout your entire organization. To accomplish that, our
           experts collaborate with you to identify your goals and needs, then
           pair with you to solve complex problems and build internal capacity
           using the Skylight Service Design Framework.
+        </p>
+        <p>
+          Developed in collaboration with the renowned
+          <a href="https://designlab.ucsd.edu/">UC San Diego Design Lab</a>,
+          this framework draws on years of experience working on complex
+          government projects. It leverages best practices for building services
+          that work better for users and the government offices who administer
+          them.
         </p>
         <img
           class="img-fluid mt-5"
@@ -124,7 +132,12 @@ preload: hero-service-design.svg
           that work better for users and the government offices who administer
           them.
         </p>
-        <h2 class="sd__heading" id="case-studies">Case studies</h2>
+        <h2 class="sd__heading" id="client-spotlights">Client spotlights</h2>
+        <p>
+          From defense to healthcare, our experts and methodologies have helped
+          multiple government agencies deliver better public services in ways
+          that only service design can.
+        </p>
         <div class="blog-posts-row mx-0">
           <article>
             <div
@@ -156,13 +169,10 @@ preload: hero-service-design.svg
                   </a>
                 </div>
               </div>
+            </div>
           </article>
           <article class="mt-5">
-            <div
-              class="blog-post-card card-link"
-              data-href="#0"
-              tabindex="-1"
-            >
+            <div class="blog-post-card card-link" data-href="#0" tabindex="-1">
               <div
                 role="img"
                 class="card-img blog-post-img col-md-4"
@@ -193,11 +203,7 @@ preload: hero-service-design.svg
             </div>
           </article>
           <article class="mt-5">
-            <div
-              class="blog-post-card card-link"
-              data-href="#0"
-              tabindex="-1"
-            >
+            <div class="blog-post-card card-link" data-href="#0" tabindex="-1">
               <div
                 role="img"
                 class="card-img blog-post-img col-md-4"
@@ -212,8 +218,9 @@ preload: hero-service-design.svg
                   Building service design capacity
                 </h3>
                 <p class="blog-post-text">
-                  Embedding service design ways of thinking and working throughout the U.S. Air Force, 
-                  starting with BESPIN and the U.S. Weather Systems Program Office. 
+                  Embedding service design ways of thinking and working
+                  throughout the U.S. Air Force, starting with BESPIN and the
+                  U.S. Weather Systems Program Office.
                 </p>
                 <div class="card-footer blog-post-footer">
                   <a href="/work/experience/usaf-gearfit/" tabindex="0">
@@ -229,20 +236,27 @@ preload: hero-service-design.svg
           How to engage with us
         </h2>
         <img
-          class="img--engage img-fluid mt-sm-2 mb-3 mb-sm-0"
+          class="img--engage img-fluid mt-sm-2 mb-3"
           src="/img/service_design/people-high-fiving.svg"
           alt="Two people effortlessly high-fiving."
         />
         <p>
-          The best way to contract with Skylight is through the federal
-          government’s Small Business Innovation Research (SBIR) / Small
-          Business Technology Transfer (STTR) program.
+          The best way to contract with Skylight for service design support is
+          through the federal government’s Small Business Innovation Research
+          (SBIR) / Small Business Technology Transfer (STTR) program.
         </p>
         <p>
-          Through this program, the U.S. Air Force awarded Skylight a series of
-          STTR contracts related to service design. Any government agency can
-          leverage these contracts to issue direct (or non-competitive) awards —
-          without dollar, time, or size standard restrictions.
+          Through this program, the U.S. Air Force awarded Skylight an STTR
+          Phase II contract related to service design. The scope of this
+          contract encompassed the full range of activities that go into
+          delivering better user experience journeys. These activities include,
+          but aren’t limited to, user research, user experience design, product
+          management, software delivery, data management, and organizational
+          change management. As long as your support requirements “extend or
+          derive” from the original scope of work under our STTR Phase II
+          contract, you can leverage it to issue a direct (or non-competitive)
+          Phase III award to Skylight — without any dollar, time, or size
+          standard restrictions.
         </p>
         <p>
           For more information on how to work with Skylight through the
