Add paragraph break

--- a/pages/services/service_design.html
+++ b/pages/services/service_design.html
@@ -246,11 +246,13 @@ preload: hero-service-design.svg
           delivering better user experience journeys. These activities include,
           but aren’t limited to, user research, user experience design, product
           management, software delivery, data management, and organizational
-          change management. As long as your support requirements “extend or
-          derive” from the original scope of work under our STTR Phase II
-          contract, you can leverage it to issue a direct (or non-competitive)
-          Phase III award to Skylight — without any dollar, time, or size
-          standard restrictions.
+          change management.
+        </p>
+        <p>
+          As long as your support requirements “extend or derive” from the
+          original scope of work under our STTR Phase II contract, you can
+          leverage it to issue a direct (or non-competitive) Phase III award to
+          Skylight — without any dollar, time, or size standard restrictions.
         </p>
         <p>
           For more information on how to work with Skylight through the
