--- a/pages/services/service_design.html
+++ b/pages/services/service_design.html
@@ -118,7 +118,7 @@ preload: hero-service-design.svg
           alt="The Skylight Service Design Framework."
         />
         <p class="caption mt-0 mb-5">Skylight Service Design Framework</p>
-        <p>
+        <p class="mb-0">
           Developed in collaboration with the renowned
           <a href="https://designlab.ucsd.edu/">UC San Diego Design Lab</a>,
           this framework draws on years of experience working on complex
