--- a/pages/join.html
+++ b/pages/join.html
@@ -75,7 +75,7 @@ preload: hero-join-us.svg
               right problems in an increasingly complex environment, alongside some of the most
               inspired and talented folks in the industry.”
             </p>
-            <p class="join-quote__byline">– <b>Charlye Tran,</b> Product Manager</p>
+            <p class="join-quote__byline">– <b>Charlye Tran,</b> Service Designer</p>
           </div>
         </div>
 
@@ -107,7 +107,7 @@ preload: hero-join-us.svg
               can make the biggest impact.”
             </p>
 
-            <p class="join-quote__byline">– <b>Laura King,</b> UX Designer</p>
+            <p class="join-quote__byline">– <b>Laura King,</b> Service Designer</p>
           </div>
         </div>
 
