--- a/pages/services.html
+++ b/pages/services.html
@@ -23,7 +23,7 @@ preload: hero-services.svg
     <div class="grid-container prose">
       <div class="row pt-3">
         <div class="col-md-6 order-2 order-md-1 mt-4 mt-md-0">
-          <h2>Service delivery</h2>
+          <h2 id='service-delivery'>Service delivery</h2>
           <p>
             <b
               >Today’s public expects their interactions with the government to
@@ -85,7 +85,7 @@ preload: hero-services.svg
     <div class="grid-container prose">
       <div class="row">
         <div class="col-md-6 order-2 order-md-1 mt-4 mt-md-0">
-          <h2>Procurement</h2>
+          <h2 id="procurement">Procurement</h2>
           <p>
             <b>To support digital progress, procurement must change.</b> We
             combine technical and acquisition brains to make procurement work
