Add img to 404 and thank you

--- a/thankyou.html
+++ b/thankyou.html
@@ -17,6 +17,8 @@ skip_index: true
     header_title = "Thank you!"
     header_content_class = "page-header-content-1"
     header_content = header_content
+    header_img_src = "/img/thank-you.jpg"
+    header_img_desc = "A hand holds a cell phone receiving email"
   %}
 </div>
 
