update broken links

--- a/pages/services.html
+++ b/pages/services.html
@@ -143,7 +143,7 @@ preload: hero-services.svg
     <div class="grid-container prose">
       <div class="row">
         <div class="col-md-6 order-2 order-md-1 mt-4 mt-md-0">
-          <h2>Transformation</h2>
+          <h2 id='transformation'>Transformation</h2>
           <p>
             <b>“Going digital” is about people first and technology second.</b>
             We possess first-hand experience with embedding digital expertise
@@ -203,7 +203,7 @@ preload: hero-services.svg
     <div class="grid-container prose">
       <div class="row">
         <div class="col-md-6 order-2 order-md-1 mt-4 mt-md-0">
-          <h2>Microconsulting</h2>
+          <h2 id="microconsulting">Microconsulting</h2>
           <p>
             <b
               >Need immediate, high-impact support to address a problem or
