--- a/thankyou.html
+++ b/thankyou.html
@@ -17,8 +17,8 @@ skip_index: true
     header_title = "Thank you!"
     header_content_class = "page-header-content-1"
     header_content = header_content
-    header_img_src = "/img/thank-you.jpg"
-    header_img_desc = "A hand holds a cell phone receiving email"
+    header_img_src = "/img/message-received.svg"
+    header_img_desc = "A hand holding a cell phone that receives an email"
   %}
 </div>
 
