--- a/404.html
+++ b/404.html
@@ -14,7 +14,7 @@ skip_index: true
 
   {% include page_header.html
     header_title = "Oh snap!"
-    header_content_class = "page-header-content-1"
+    header_content_class = "page-header-content-1 px-sm-5"
     header_content = header_content
     header_img_src = "/img/404.svg"
     header_img_desc = "People gather around a computer screen painting over a 404 screen"
