--- a/pages/services/service_design.html
+++ b/pages/services/service_design.html
@@ -180,12 +180,11 @@ preload: hero-service-design.svg
                   Centers for Medicare & Medicaid Services
                 </p>
                 <h3 class="blog-post-title">
-                  Transforming how Medicaid and CHIP data are delivered
+                  Transforming how Medicaid and CHIP data are leveraged
                 </h3>
                 <p class="blog-post-text">
-                  Identifying opportunity areas for process improvements within
-                  the MACBIS (Medicaid and CHIP Business Information Solutions)
-                  product ecosystem.
+                  Pinpointing opportunities to deliver better user experience journeys within
+                  a complex ecosystem systems supporting the Medicaid and CHIP programs.
                 </p>
                 <div class="card-footer blog-post-footer">
                   <a href="/work/experience/usaf-gearfit/" tabindex="0">
