--- a/pages/services/service_design.html
+++ b/pages/services/service_design.html
@@ -184,7 +184,7 @@ preload: hero-service-design.svg
                 </h3>
                 <p class="blog-post-text">
                   Pinpointing opportunities to deliver better user experience journeys within
-                  a complex ecosystem systems supporting the Medicaid and CHIP programs.
+                  a complex ecosystem of systems supporting the Medicaid and CHIP programs.
                 </p>
                 <div class="card-footer blog-post-footer">
                   <a href="/work/experience/usaf-gearfit/" tabindex="0">
