Add macbis case study

--- a/pages/services/service_design.html
+++ b/pages/services/service_design.html
@@ -166,12 +166,12 @@ preload: hero-service-design.svg
             </div>
           </article>
           <article class="mt-5">
-            <div class="blog-post-card card-link" data-href="#0" tabindex="-1">
+            <div class="blog-post-card card-link" data-href="/work/experience/cms-macbis-transformation/" tabindex="-1">
               <div
                 role="img"
                 class="card-img blog-post-img col-md-4"
                 style="
-                  background-image: url(/img/talks/podcast-placeholder-02.svg);
+                  background-image: url(/img/projects/cms_macbis_transformation/macbis.svg);
                 "
                 title=""
               ></div>
@@ -187,7 +187,7 @@ preload: hero-service-design.svg
                   a complex ecosystem of systems supporting the Medicaid and CHIP programs.
                 </p>
                 <div class="card-footer blog-post-footer">
-                  <a href="/work/experience/usaf-gearfit/" tabindex="0">
+                  <a href="/work/experience/cms-macbis-transformation/" tabindex="0">
                     <span>Read more</span
                     ><i class="fal fa-long-arrow-right" aria-hidden="true"></i>
                   </a>
