--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ preload: hero.svg
 
       <div class="landing-content-secondary-col">
         <p>
-          Delivering great public services requires teams who understand both technology and government.
+          Delivering great public services requires teams who understand both tech and government.
           We’re built from the ground up to help you reach digital mastery.
         </p>
       </div>
