Add line breaks to heros and ctas

--- a/pages/projects/index.html
+++ b/pages/projects/index.html
@@ -19,7 +19,7 @@ pagination:
 
 {% capture header_content %}
   Explore a sampling of the types of experience that
-  we can bring to your biggest digital challenges.
+  we can <br class="linebreak">bring to your biggest digital challenges.
 {% endcapture %}
 {% include page_header.html header_content_class = 'page-header-content-1' header_content = header_content %}
 {% include filter_component.html %}
