--- a/pages/training.html
+++ b/pages/training.html
@@ -8,7 +8,7 @@ image_description: Skylight training banner showing various educational-related 
 ---
 
 {% include hero_banner.html
-  hero_content = "Get the skills you need to make government work in a digital world."
+  hero_content = 'Get the skills you need to make <br class="linebreak">government work in a digital world.'
   color = "primary"
   image = "hero-training.svg"
 %}
