Add service design case study

--- a/pages/services/service_design.html
+++ b/pages/services/service_design.html
@@ -196,12 +196,12 @@ preload: hero-service-design.svg
             </div>
           </article>
           <article class="mt-5">
-            <div class="blog-post-card card-link" data-href="#0" tabindex="-1">
+            <div class="blog-post-card card-link" data-href="/work/experience/usaf-service-design-capacity-building/" tabindex="-1">
               <div
                 role="img"
                 class="card-img blog-post-img col-md-4"
                 style="
-                  background-image: url(/img/talks/podcast-placeholder-02.svg);
+                  background-image: url(/img/projects/usaf_sda/service-design.svg);
                 "
                 title=""
               ></div>
@@ -216,7 +216,7 @@ preload: hero-service-design.svg
                   U.S. Weather Systems Program Office.
                 </p>
                 <div class="card-footer blog-post-footer">
-                  <a href="/work/experience/usaf-gearfit/" tabindex="0">
+                  <a href="/work/experience/usaf-service-design-capacity-building/" tabindex="0">
                     <span>Read more</span
                     ><i class="fal fa-long-arrow-right" aria-hidden="true"></i>
                   </a>
