--- a/pages/trainings/ditap.html
+++ b/pages/trainings/ditap.html
@@ -390,7 +390,7 @@ class_2_spots:
             </li>
             <li>Collaboration and networking opportunities.</li>
             <li>
-              While most of the program can be completely remotely, travel for the
+              While most of the program can be completed remotely, travel for the
               in-person classroom session isn’t included.
             </li>
           </ul>
