--- a/pages/trainings/ditap_executive.html
+++ b/pages/trainings/ditap_executive.html
@@ -357,7 +357,7 @@ class_2_spots:
             This course is designed primarily for agency leaders and executives
             who need a "Cliff Notes" version of our longer, more in-depth DITAP
             course. But that's not to say this course is only for executives.
-            Anyone plays a role in the lifecycle of an acquisition (for example,
+            Anyone who plays a role in the lifecycle of an acquisition (for example,
             finance officer, legal counsellor, procurement officer, program
             manager, or technical manager) and needs a crash-course tour of modern
             digital acquisition will benefit greatly from this training.
