--- a/pages/services/service_design.html
+++ b/pages/services/service_design.html
@@ -239,9 +239,8 @@ preload: hero-service-design.svg
           (SBIR) / Small Business Technology Transfer (STTR) program.
         </p>
         <p>
-          Through this program, the U.S. Air Force awarded Skylight an STTR
-          Phase II contract related to service design. The scope of this
-          contract encompassed the full range of activities that go into
+          Through this program, we were awarded an STTR Phase II contract related to service design. 
+          The scope of this contract encompassed the full range of activities that go into
           delivering better user experience journeys. These activities include,
           but aren’t limited to, user research, user experience design, product
           management, software delivery, data management, and organizational
