Fix footer bottom padding on service design page

--- a/pages/services/service_design.html
+++ b/pages/services/service_design.html
@@ -4,7 +4,7 @@ title: "Service design: Transforming user experiences"
 permalink: /work/services/service-design/
 excerpt: Learn what service design can do for you and how Skylight can help you use it to deliver greater public value.
 tags: [service design]
-class: ditap page-service-design
+class: service-design page-offering
 preload: hero-service-design.svg
 ---
 
@@ -239,7 +239,7 @@ preload: hero-service-design.svg
           (SBIR) / Small Business Technology Transfer (STTR) program.
         </p>
         <p>
-          Through this program, we were awarded an STTR Phase II contract related to service design. 
+          Through this program, we were awarded an STTR Phase II contract related to service design.
           The scope of this contract encompassed the full range of activities that go into
           delivering better user experience journeys. These activities include,
           but aren’t limited to, user research, user experience design, product
