--- a/pages/trainings/ditap.html
+++ b/pages/trainings/ditap.html
@@ -10,7 +10,7 @@ excerpt: Learn the skills required to master the art of digital acquisition thro
 image: /img/ditap/ditap-social.png
 image_description: Banner of Skylight’s Digital IT Acquisition Professional Training course.
 tags: [digital acquisition training, agile acquisition training]
-class: ditap
+class: ditap page-offering
 preload: hero-ditap.svg
 class_1_spots: 13
 class_2_spots:
