--- a/pages/trainings/ditap_executive.html
+++ b/pages/trainings/ditap_executive.html
@@ -6,7 +6,7 @@ excerpt: Learn how to transform the way your agency procures modern technology p
 image: /img/ditap_executive/ditap-executive-social.png
 image_description: Banner of Skylight’s Digital IT Acquisition Professional Training — Executive Edition course.
 tags: [digital acquisition training, agile acquisition training]
-class: ditap
+class: ditap page-offering
 preload: hero-ditap-exec.svg
 class_1_spots:
 class_2_spots:
