Add some a11y fixes

--- a/pages/services/service_design.html
+++ b/pages/services/service_design.html
@@ -28,6 +28,7 @@ preload: hero-service-design.svg
             role="button"
           >
             <i class="fal fa-chevron-circle-down"></i>
+            <span class="sr-only">Main content</span>
           </a>
         </div>
       </div>
@@ -239,7 +240,7 @@ preload: hero-service-design.svg
           (SBIR) / Small Business Technology Transfer (STTR) program.
         </p>
         <p>
-          Through this program, we were awarded an STTR Phase II contract related to service design. 
+          Through this program, we were awarded an STTR Phase II contract related to service design.
           The scope of this contract encompassed the full range of activities that go into
           delivering better user experience journeys. These activities include,
           but aren’t limited to, user research, user experience design, product
