--- a/pages/toolkits.html
+++ b/pages/toolkits.html
@@ -138,6 +138,50 @@ image_description: Skylight toolkits banner showing a collection of different to
           </div>
         </div>
       </article>
+      <article class="blog-post-col col-md-6">
+        <div
+          class="blog-post-card card-link"
+          data-href="/work/toolkits/service-design-framework/"
+          tabindex="-1"
+        >
+          <div class="blog-post-block">
+            <h2 class="blog-post-title">
+              Service Design Framework
+            </h2>
+            <p class="card-text blog-post-text">
+              {{ site.data.toolkits.service_design_framework.description }}
+            </p>
+          </div>
+          <div class="blog-post-footer">
+            <a href="/work/toolkits/service-design-framework/" tabindex="0">
+              <span>View guide</span
+              ><i class="fal fa-long-arrow-right" aria-hidden="true"></i>
+            </a>
+          </div>
+        </div>
+      </article>
+      <article class="blog-post-col col-md-6">
+        <div
+          class="blog-post-card card-link"
+          data-href="/work/toolkits/design-methods/"
+          tabindex="-1"
+        >
+          <div class="blog-post-block">
+            <h2 class="blog-post-title">
+              Design Methods
+            </h2>
+            <p class="card-text blog-post-text">
+              {{ site.data.toolkits.design_methods.description }}
+            </p>
+          </div>
+          <div class="blog-post-footer">
+            <a href="/work/toolkits/design-methods/" tabindex="0">
+              <span>View methods</span
+              ><i class="fal fa-long-arrow-right" aria-hidden="true"></i>
+            </a>
+          </div>
+        </div>
+      </article>
     </div>
 
     <p>
