--- a/pages/trainings/ditap_executive.html
+++ b/pages/trainings/ditap_executive.html
@@ -429,7 +429,8 @@ class_2_spots:
           <ul>
             <li>
               You can submit a cancellation request 10 business days or more prior
-              to the start of the course and receive a full refund.
+              to the start of the course and receive a full refund, minus the 
+              Eventbrite processing fee, if applicable.
             </li>
             <li>
               If you submit a cancellation request fewer than 10 business days
