--- a/pages/services.html
+++ b/pages/services.html
@@ -284,7 +284,7 @@ preload: hero-services.svg
           <a
             class="btn btn-primary font-weight-bold"
             href="/work/services/training/"
-            >Level up</a
+            >View training options</a
           >
         </div>
         <div class="col-md-6 order-1 order-md-2">
