--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ preload: hero.svg
 
       <div class="landing-content-ctas-col">
         <div class="landing-content-cta-wrapper">
-          <a href="/work/services/" role="button">View our services</a>
+          <a href="/work/services/" role="button">Explore services</a>
         </div>
 
         <div class="landing-content-cta-wrapper">
