--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ preload: hero.svg
         </div>
 
         <div class="landing-content-cta-wrapper">
-          <a href="/work/experience/" role="button">See our work</a>
+          <a href="/work/experience/" role="button">View our work</a>
         </div>
       </div>
     </section>
