--- a/index.html
+++ b/index.html
@@ -153,11 +153,11 @@ preload: hero.svg
 
       <div class="landing-content-ctas-col">
         <div class="landing-content-cta-wrapper">
-          <a href="/work/services/" role="button">View our services</a>
+          <a href="/work/services/" role="button">See our services</a>
         </div>
 
         <div class="landing-content-cta-wrapper">
-          <a href="/work/experience/" role="button">See our work</a>
+          <a href="/work/experience/" role="button">View our work</a>
         </div>
       </div>
     </section>
