Use site variable for employee count and state count

--- a/pages/about.html
+++ b/pages/about.html
@@ -19,7 +19,7 @@ preload: hero-about-us.svg
     <div class="about-info grid-container text">
       <h2 class="margin-heading text-center">Our story</h2>
       <p>
-        Skylight was launched in June of 2017. We’re currently made up of 53 people and
+        Skylight was launched in June of 2017. We’re currently made up of {{site.employee_count}} people and
         one ferret. A lot of us originally worked for civic-oriented groups such as 18F,
         the U.S. Digital Service, and the Presidential Innovation Fellows.
         Now, as part of Skylight, we’re working hard to cultivate an incredible
@@ -35,7 +35,7 @@ preload: hero-about-us.svg
       </p>
       <p>
         Our official headquarters is in sunny <a href="https://goo.gl/maps/3pX7v6YjSmpkwchz5">Sarasota, Florida</a>,
-        but we’re a distributed and remote-friendly team currently spread across 24 different states.
+        but we’re a distributed and remote-friendly team currently spread across {{site.state_count}} different states.
         Sometimes the nature of our client work calls for closer proximity to their location.
         So far, we’ve worked with clients located in places like Washington DC, Hartford (Connecticut),
         Montgomery (Alabama), Baltimore (Maryland), and Ottawa (Canada).
