Add links to SDF from SD page

--- a/pages/services/service_design.html
+++ b/pages/services/service_design.html
@@ -111,14 +111,16 @@ preload: hero-service-design.svg
           working throughout your entire organization. To accomplish that, our
           experts collaborate with you to identify your goals and needs, then
           pair with you to solve complex problems and build internal capacity
-          using the Skylight Service Design Framework.
+          using the <a href="/work/toolkits/service-design-framework/">Skylight Service Design Framework</a>.
         </p>
         <img
           class="img-fluid mt-5"
           src="/img/service_design/skylight-service-design-framework.svg"
           alt="The Skylight Service Design Framework."
         />
-        <p class="caption mt-0 mb-5">Skylight Service Design Framework</p>
+        <p class="caption mt-0 mb-5">
+          <a href="/work/toolkits/service-design-framework/">Skylight Service Design Framework</a>
+        </p>
         <p class="mb-0">
           Developed in collaboration with the renowned
           <a href="https://designlab.ucsd.edu/">UC San Diego Design Lab</a>,
