--- a/pages/toolkits.html
+++ b/pages/toolkits.html
@@ -19,10 +19,10 @@ image_description: Skylight toolkits banner showing a collection of different to
     <p>
       Here are some of the tools and resources that we use at Skylight to help
       us and our clients deliver better public services. These toolkits are
-      always being iterated on and are available to everyone under our
+      always being iterated on and are available to everyone under a
       <a
         href="https://github.com/skylight-hq/skylight.digital/blob/master/LICENSE.md"
-        >public-domain license.</a
+        >creative-commons or public-domain license.</a
       >
       Feel free to copy and adapt them as you choose.
     </p>
