Update home links

--- a/pages/brand/landing.html
+++ b/pages/brand/landing.html
@@ -17,10 +17,10 @@ preload:
 
 <h2>Quick links</h2>
 <ul>
-  <li><a href="0#">Brand colors</a></li>
-  <li><a href="0#">Logos</a></li>
-  <li><a href="0#">Fonts</a></li>
-  <li><a href="0#">Writing style</a></li>
+  <li><a href="/brand/identity/colors/">Brand colors</a></li>
+  <li><a href="/brand/identity/logo/">Logo</a></li>
+  <li><a href="/brand/identity/typography/">Fonts</a></li>
+  <li><a href="/brand/writing/style/">Writing style</a></li>
 </ul>
 
 <section>
