Add links to sections

--- a/pages/brand/landing.html
+++ b/pages/brand/landing.html
@@ -8,20 +8,47 @@ class:
 preload:
 ---
 
-<h1>Brand Guidelines</h1>
-<p>
-  Hello! Welcome to Skylight’s brand guidelines. Our guidelines are designed to
-  communicate who Skylight is to our customers, partners, employees, and
-  prospective hires. If you can’t find what you need, please contact us.
-</p>
+<section>
+  <h1>Brand Guidelines</h1>
+  <p>
+    Hello! Welcome to Skylight’s brand guidelines. Our guidelines are designed
+    to communicate who Skylight is to our customers, partners, employees, and
+    prospective hires. If you can’t find what you need, please contact us.
+  </p>
 
-<h2>Quick links</h2>
-<ul>
-  <li><a href="/brand/identity/colors/">Brand colors</a></li>
-  <li><a href="/brand/identity/logo/">Logo</a></li>
-  <li><a href="/brand/identity/typography/">Fonts</a></li>
-  <li><a href="/brand/writing/style/">Writing style</a></li>
-</ul>
+  <h2>Quick links</h2>
+  <ul>
+    <li><a href="/brand/identity/colors/">Brand colors</a></li>
+    <li><a href="/brand/identity/logo/">Logo</a></li>
+    <li><a href="/brand/identity/typography/">Fonts</a></li>
+    <li><a href="/brand/writing/style/">Writing style</a></li>
+  </ul>
+</section>
+
+<section>
+  <ul>
+    <li>
+      <a href="/brand/identity/logo/">Identity</a>
+      <p>{{ site.data.toolkits.brand_identity.description }}</p>
+    </li>
+    <li>
+      <a href="/brand/writing/brand-narrative/">Writing</a>
+      <p>{{ site.data.toolkits.brand_writing.description }}</p>
+    </li>
+    <li>
+      <a href="/brand/illustration/principles/">Illustration</a>
+      <p>{{ site.data.toolkits.brand_illustration.description }}</p>
+    </li>
+    <li>
+      <a href="/brand/outreach/intro/">Outreach</a>
+      <p>{{ site.data.toolkits.brand_outreach.description }}</p>
+    </li>
+    <li>
+      <a href="/brand/resources/emoji/">Resources</a>
+      <p>{{ site.data.toolkits.brand_resources.description }}</p>
+    </li>
+  </ul>
+</section>
 
 <section>
   <h2>Working with customers and partners</h2>
