Add logo link to brand landing page

--- a/pages/brand/inner.html
+++ b/pages/brand/inner.html
@@ -4,8 +4,9 @@ title: Inner page
 permalink: /brand/inner/
 excerpt:
 tags:
-class:
 preload:
+toolkit_name: brand
+class:
 ---
 
 <h1>Inner page</h1>
