--- a/pages/brand/landing.html
+++ b/pages/brand/landing.html
@@ -4,8 +4,9 @@ title: Brand guidelines
 permalink: /brand/
 excerpt: Guidelines designed to communicate who Skylight is to our customers, partners, employees, and prospective hires.
 tags: [design]
-class:
 preload:
+toolkit_name: brand
+class:
 ---
 
 <section>
