Update cta links

--- a/pages/trainings/ditap_executive.html
+++ b/pages/trainings/ditap_executive.html
@@ -213,13 +213,14 @@ class_2_spots:
               <p>Ready to get started?</p>
               <p class="mt-3">
                 <a
+                  class="link--cta"
                   href="https://www.eventbrite.com/e/digital-it-acquisition-professional-ditap-training-executive-edition-tickets-105264284308"
-                  >Register now
+                  ><span class="link__text--cta">Register now</span>
                   <i
                     class="fal fa-long-arrow-right"
                     aria-hidden="true"
-                  ></i
-                ></a>
+                  ></i>
+                </a>
               </p>
             </div>
           </div>
@@ -429,7 +430,7 @@ class_2_spots:
           <ul>
             <li>
               You can submit a cancellation request 10 business days or more prior
-              to the start of the course and receive a full refund, minus the 
+              to the start of the course and receive a full refund, minus the
               Eventbrite processing fee, if applicable.
             </li>
             <li>
