--- a/pages/trainings/ditap.html
+++ b/pages/trainings/ditap.html
@@ -242,10 +242,10 @@ class_2_spots:
             <div class="course-cta card border p-4">
               <p>Want to know more about our course?</p>
               <p class="mt-3">
-                <a href="/assets/Skylight-DITAP-Syllabus.pdf"
-                  >Read syllabus
-                  <i class="fal fa-long-arrow-right" aria-hidden="true"></i
-                ></a>
+                <a class="link--cta" href="/assets/Skylight-DITAP-Syllabus.pdf">
+                  <span class="link__text--cta">Read syllabus</span>
+                  <i class="fal fa-long-arrow-right" aria-hidden="true"></i>
+                </a>
               </p>
             </div>
           </div>
@@ -442,7 +442,7 @@ class_2_spots:
           <ul>
             <li>
               You can submit a cancellation request 30 business days or more prior
-              to the start of the course and receive a full refund, minus the 
+              to the start of the course and receive a full refund, minus the
               Eventbrite processing fee, if applicable.
             </li>
             <li>
