Add some  initial style

--- a/pages/brand/landing.html
+++ b/pages/brand/landing.html
@@ -9,21 +9,33 @@ toolkit_name: brand
 class:
 ---
 
-<section>
-  <h1>Brand Guidelines</h1>
-  <p>
-    Hello! Welcome to Skylight’s brand guidelines. Our guidelines are designed
-    to communicate who Skylight is to our customers, partners, employees, and
-    prospective hires. If you can’t find what you need, please contact us.
-  </p>
+<section class="bg-primary hero-banner">
+  <div class="hero">
+    <div class="hero-container grid-container">
+      <div class="maxw-lg">
+        <div class="my-5">
+          <h1 class="text-white">
+            Brand Guidelines
+          </h1>
+          <p class="hero-text text-white font-lg">
+            Hello! Welcome to Skylight’s brand guidelines. Our guidelines are designed
+            to communicate who Skylight is to our customers, partners, employees, and
+            prospective hires. If you can’t find what you need, please contact us.
+          </p>
+        </div>
+      </div>
 
-  <h2>Quick links</h2>
-  <ul>
-    <li><a href="/brand/identity/colors/">Brand colors</a></li>
-    <li><a href="/brand/identity/logo/">Logo</a></li>
-    <li><a href="/brand/identity/typography/">Fonts</a></li>
-    <li><a href="/brand/writing/style/">Writing style</a></li>
-  </ul>
+      <div>
+        <h2>Quick links</h2>
+        <ul class="text-white">
+          <li><a href="/brand/identity/colors/">Brand colors</a></li>
+          <li><a href="/brand/identity/logo/">Logo</a></li>
+          <li><a href="/brand/identity/typography/">Fonts</a></li>
+          <li><a href="/brand/writing/style/">Writing style</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
 </section>
 
 <section>
@@ -51,12 +63,14 @@ class:
   </ul>
 </section>
 
-<section>
-  <h2>Working with customers and partners</h2>
-  <p>
-    At Skylight, you’ll often be working alongside customers with their own
-    design systems and branding. For example, if you’re helping your U.S. Air
-    Force client prepare a presentation to a four-star general, you should most
-    likely be using their brand guidelines — not ours.
-  </p>
+<section class="bg-gray-lightest">
+  <div class="grid-container">
+    <h2>Working with customers and partners</h2>
+    <p>
+      At Skylight, you’ll often be working alongside customers with their own
+      design systems and branding. For example, if you’re helping your U.S. Air
+      Force client prepare a presentation to a four-star general, you should most
+      likely be using their brand guidelines — not ours.
+    </p>
+  </div>
 </section>
